# tugnova

hmi/script/: autorun_hmi_server.sh  hmi_server.service  readme
hmi/src/bluetooth/: CMakeLists.txt  package.xml
hmi/src/bluetooth/src/: client.py
hmi/src/communication/: CMakeLists.txt  package.xml
hmi/src/communication/src/: server.py
hmi/src/marionet/: CMakeLists.txt  package.xml
hmi/src/marionet/src/: publisher.py
tugnova_pc/autoware_status/: CMakeLists.txt  package.xml
tugnova_pc/autoware_status/include/: status_code.h
tugnova_pc/autoware_status/launch/: autoware_status.launch
tugnova_pc/autoware_status/src/: status_code.cpp
tugnova_pc/battery_meter/: CMakeLists.txt  package.xml
tugnova_pc/battery_meter/include/: battery_meter.h
tugnova_pc/battery_meter/launch/: battery_meter.launch
tugnova_pc/battery_meter/src/: battery_meter.cpp
tugnova_pc/conveyor_cargo/: CMakeLists.txt  package.xml
tugnova_pc/conveyor_cargo/include/: conveyor_cargo_checker.h
tugnova_pc/conveyor_cargo/launch/: conveyor_cargo_checker.launch
tugnova_pc/conveyor_cargo/src/: conveyor_check.cpp
tugnova_pc/csv_read_refresh/: CMakeLists.txt  package.xml
tugnova_pc/csv_read_refresh/include/: csv_refresh_clock.h
tugnova_pc/csv_read_refresh/launch/: refresh_clock.launch
tugnova_pc/csv_read_refresh/src/: csv_refresh_clock.cpp
tugnova_pc/drive_mode_controller/: CMakeLists.txt  package.xml
tugnova_pc/drive_mode_controller/include/: drive_controller.h
tugnova_pc/drive_mode_controller/launch/: drive_controller.launch
tugnova_pc/drive_mode_controller/src/: drive_controller.cpp
tugnova_pc/drive_stop_controller/: CMakeLists.txt  package.xml
tugnova_pc/drive_stop_controller/include/: drive_stop_controller.h
tugnova_pc/drive_stop_controller/launch/: drive_stop_controller.launch
tugnova_pc/drive_stop_controller/src/: drive_stop_controller.cpp
tugnova_pc/hotspot_trigger/: CMakeLists.txt  package.xml
tugnova_pc/hotspot_trigger/include/: hotspot_trigger.h
tugnova_pc/hotspot_trigger/launch/: hotspot_trigger.launch
tugnova_pc/hotspot_trigger/src/: hotspot_trigger.cpp
tugnova_pc/lamp_checker/: CMakeLists.txt  package.xml
tugnova_pc/lamp_checker/include/: lamp_checker.h
tugnova_pc/lamp_checker/launch/: lamp_checker.launch
tugnova_pc/lamp_checker/src/: lamp_checker.cpp
tugnova_pc/livox_detector/: CMakeLists.txt  package.xml
tugnova_pc/livox_health_checker/: CMakeLists.txt  package.xml
tugnova_pc/livox_health_checker/include/: livox_health_checker.h
tugnova_pc/livox_health_checker/launch/: health_checker.launch
tugnova_pc/livox_health_checker/src/: health_checker.cpp
tugnova_pc/monitor_ndt_stats/: CMakeLists.txt  package.xml
tugnova_pc/monitor_ndt_stats/include/: ndt_stats_health.h
tugnova_pc/monitor_ndt_stats/launch/: ndt_stat_health.launch
tugnova_pc/monitor_ndt_stats/src/: ndt_stats_health.cpp
tugnova_pc/msgs/communication_msgs/: CMakeLists.txt  package.xml
tugnova_pc/msgs/communication_msgs/msg/: LampState.msg  MarionetteMessage.msg  PlcConveyor.msg  RouteInfo.msg  RouteResponse.msg  Stats.msg
tugnova_pc/nodeshell/: 10obstacleaboid.sh  10pubtwistconfig.sh  10pubveloconfig.sh  10pubwayconfig.sh  10pubwayloadconfig.sh  11velocityset.sh  12waypointloader.sh  12waypointloader_static.sh  13purepursuit.sh  14twistfilter.sh  15change_config_ray_ground_filter.sh  15change_config_voxel_grid_filter.sh  15change_config_waypoint_follower.sh  15changeobstaclearea.sh  15check_change_route.sh  15checktlr.sh  15ctlreduce.sh  15ctlvehicle.sh  15direct_stop.sh  15realsense2_camera.sh  15servercheck.sh  15update_map_route.sh  15waypoint_monitor.sh  16generatecan.sh  16generatevehicletwist.sh  16lostlocalization.sh  16setupvehicleinfo.sh  16velposediffchecker.sh  17ctl_led.sh  17monitoring_health.sh  17monitoring_notification.sh  17ping_node.sh  18recover_localization.sh  1readmap.sh  2pubvoxcelgridfilterconfig.sh  2readtf.sh  2readvelodynetf.sh  (+107 more)
tugnova_pc/object_detection_checker/: CMakeLists.txt  package.xml
tugnova_pc/object_detection_checker/include/: object_detection_checker.h
tugnova_pc/object_detection_checker/launch/: object_detection_checker.launch
tugnova_pc/object_detection_checker/src/: object_detection_checker.cpp
tugnova_pc/object_detection_listener/: CMakeLists.txt  package.xml
tugnova_pc/object_detection_listener/include/: object_detection_listener.h
tugnova_pc/object_detection_listener/launch/: object_detection_listener.launch
tugnova_pc/object_detection_listener/src/: object_detection_listener.cpp
tugnova_pc/pcd2int/: CMakeLists.txt  package.xml  pcd2int.launch
tugnova_pc/pcd2int/include/: pcd2int.h
tugnova_pc/pcd2int/src/: pcd2int.cpp
tugnova_pc/shutter/: CMakeLists.txt  package.xml
tugnova_pc/shutter/include/: shutter_controller.h
tugnova_pc/shutter/launch/: shutter.launch
tugnova_pc/shutter/src/: shutter_controller.cpp
tugnova_pc/sound_box/: CMakeLists.txt  package.xml
tugnova_pc/sound_box/include/: sound_box.h
tugnova_pc/sound_box/launch/: sound_box.launch
tugnova_pc/sound_box/src/: sound_box.cpp
tugnova_pc/traffic_lights/: CMakeLists.txt  package.xml
tugnova_pc/traffic_lights/include/: traffic_lights.h
tugnova_pc/traffic_lights/launch/: traffic_lights.launch
tugnova_pc/traffic_lights/src/: traffic_lights.cpp
tugnova_pc/tugnova_ros2/src/plc_connector/: CMakeLists.txt  package.xml
tugnova_pc/tugnova_ros2/src/plc_connector/include/: plc_receiver.hpp  plc_sender.hpp
tugnova_pc/tugnova_ros2/src/plc_connector/launch/: plc_connector_launch.py
tugnova_pc/tugnova_ros2/src/plc_connector/src/: plc_receiver.cpp  plc_sender.cpp
tugnova_pc/tugnova_ros2/src/udp_connector/: CMakeLists.txt  package.xml
tugnova_pc/tugnova_ros2/src/udp_connector/include/: plc_connector.hpp  udp_connector.hpp
tugnova_pc/tugnova_ros2/src/udp_connector/src/: plc_receiver.cpp  plc_receiver_node.cpp  plc_sender.cpp  plc_sender_node.cpp  udp_connector.cpp
tugnova_pc/tugnova_ros2/src/udp_msgs/: CMakeLists.txt  package.xml
tugnova_pc/tugnova_ros2/src/udp_msgs/msg/: UdpControlPacket.msg  UdpSensorPacket.msg
(+62 files in other folders)
