<?xml version="1.0"?>
<package format="2">
  <name>conveyor_cargo</name>
  <version>0.0.0</version>
  <description>The conveyor_cargo package</description>

  <maintainer email="freedom@todo.todo">Dabwitso</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>communication_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>udp_msgs</build_depend>
  <build_export_depend>communication_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>udp_msgs</build_export_depend>
  <exec_depend>communication_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>udp_msgs</exec_depend>
</package>
